<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="8"
    android:rowCount="10"
    android:orientation="horizontal" >

	<!-- ROW0 -->
	<Button android:tag="a8"
	    android:text="@string/black_rook"
	    android:id="@+id/a8"
		android:minHeight="0dp"
		android:minWidth="45dp" 
		android:background="@drawable/button_white"
	    android:onClick="onSelect" />
	<Button android:tag="b8"
	    android:text="@string/black_knight"
	    android:id="@+id/b8"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="c8"
	    android:text="@string/black_bishop"
	    android:id="@+id/c8"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="d8"
	    android:text="@string/black_queen"
	    android:id="@+id/d8"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="e8"
	    android:text="@string/black_king"
	    android:id="@+id/e8"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="f8"
	    android:text="@string/black_bishop"
	    android:id="@+id/f8"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="g8"
	    android:text="@string/black_knight"
	    android:id="@+id/g8"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="h8"
	    android:text="@string/black_rook"
	    android:id="@+id/h8"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />

	<!-- ROW1 --> 	
	<Button android:tag="a7"
	    android:text="@string/black_pawn"
	    android:id="@+id/a7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="b7"
	    android:text="@string/black_pawn"
	    android:id="@+id/b7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="c7"
	    android:text="@string/black_pawn"
	    android:id="@+id/c7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="d7"
	    android:text="@string/black_pawn"
	    android:id="@+id/d7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="e7"
	    android:text="@string/black_pawn"
	    android:id="@+id/e7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="f7"
	    android:text="@string/black_pawn"
	    android:id="@+id/f7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="g7"
	    android:text="@string/black_pawn"
	    android:id="@+id/g7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
 	<Button android:tag="h7"
 	    android:text="@string/black_pawn"
 	    android:id="@+id/h7"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />

	<!-- ROW2 -->
 	<Button android:tag="a6"
 	    android:id="@+id/a6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="b6"
	    android:id="@+id/b6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="c6"
	    android:id="@+id/c6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="d6"
	    android:id="@+id/d6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="e6"
	    android:id="@+id/e6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="f6"
	    android:id="@+id/f6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="g6"
	    android:id="@+id/g6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
 	<Button android:tag="h6"
 	    android:id="@+id/h6"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />

	<!-- ROW3 -->
 	<Button android:tag="a5"
 	    android:id="@+id/a5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="b5"
	    android:id="@+id/b5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="c5"
	    android:id="@+id/c5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="d5"
	    android:id="@+id/d5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="e5"
	    android:id="@+id/e5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="f5"
	    android:id="@+id/f5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="g5"
	    android:id="@+id/g5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
 	<Button android:tag="h5"
 	    android:id="@+id/h5"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />

	<!-- ROW4 -->
 	<Button android:tag="a4"
 	    android:id="@+id/a4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="b4"
	    android:id="@+id/b4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="c4"
	    android:id="@+id/c4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="d4"
	    android:id="@+id/d4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="e4"
	    android:id="@+id/e4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="f4"
	    android:id="@+id/f4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="g4"
	    android:id="@+id/g4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
 	<Button android:tag="h4"
 	    android:id="@+id/h4"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />

	<!-- ROW5 -->
 	<Button android:tag="a3"
 	    android:id="@+id/a3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="b3"
	    android:id="@+id/b3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="c3"
	    android:id="@+id/c3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="d3"
	    android:id="@+id/d3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="e3"
	    android:id="@+id/e3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="f3"
	    android:id="@+id/f3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="g3"
	    android:id="@+id/g3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
 	<Button android:tag="h3"
 	    android:id="@+id/h3"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />

	<!-- ROW6 -->
 	<Button android:tag="a2"
 	    android:text="@string/white_pawn"
 	    android:id="@+id/a2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="b2"
	    android:text="@string/white_pawn"
	    android:id="@+id/b2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="c2"
	    android:text="@string/white_pawn"
	    android:id="@+id/c2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="d2"
	    android:text="@string/white_pawn"
	    android:id="@+id/d2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="e2"
	    android:text="@string/white_pawn"
	    android:id="@+id/e2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="f2"
	    android:text="@string/white_pawn"
	    android:id="@+id/f2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="g2"
	    android:text="@string/white_pawn"
	    android:id="@+id/g2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
 	<Button android:tag="h2"
 	    android:text="@string/white_pawn"
 	    android:id="@+id/h2"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />

	<!-- ROW7 -->
 	<Button android:tag="a1"
 	    android:text="@string/white_rook"
 	    android:id="@+id/a1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="b1"
	    android:text="@string/white_knight"
	    android:id="@+id/b1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="c1"
	    android:text="@string/white_bishop"
	    android:id="@+id/c1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="d1"
	    android:text="@string/white_queen"
	    android:id="@+id/d1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="e1"
	    android:text="@string/white_king"
	    android:id="@+id/e1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
	<Button android:tag="f1"
	    android:text="@string/white_bishop"
	    android:id="@+id/f1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
	<Button android:tag="g1"
	    android:text="@string/white_knight"
	    android:id="@+id/g1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_black"
		android:onClick="onSelect" />
 	<Button android:tag="h1"
 	    android:text="@string/white_rook"
 	    android:id="@+id/h1"
		android:minHeight="0dp"
		android:minWidth="45dp"
		android:background="@drawable/button_white"
		android:onClick="onSelect" />
 	
 	<!-- ROW 8 -->
 	<Button
 	    android:tag="back_button"
 	    android:id="@+id/back_button"
 	    android:text="@string/back_button"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_column="0"
 	    android:layout_columnSpan="2" 
 	    android:onClick="back" />
 	<Button 
 	    android:tag="exit_button"
 	    android:id="@+id/exit_button"
 	    android:text="@string/exit_button"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_column="2"
 	    android:layout_columnSpan="2"
 	    android:onClick="exit" />"
 	
 	<Button 
 	    android:tag="next_button"
 	    android:id="@+id/next_button"
 	    android:text="@string/next_button"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_column="5"
 	    android:layout_columnSpan="2"
 	    android:onClick="next" />
 
 	</GridLayout>